<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/num1"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/ingrese_el_numero_1"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/ingrese_el_numero_2"
        android:minHeight="50dp" />
    <Button
        android:id="@+id/bSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sumar"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

</LinearLayout>
